added javafx functionality after difficulty selection