@@ -14,3 +14,10 @@ March 4, 2025:
 - Choose Category (Kobe)
 - Board layout (Maxie)
 - Click functionality (Carlie)
+
+javac --module-path C:/javafx-sdk-21.0.6/lib --add-modules javafx.controls,javafx.fxml,javafx.swing -d out src/main/java/com/Main.java
+
+java --module-path C:/javafx-sdk-21.0.6/lib --add-modules javafx.controls,javafx.fxml -cp out src.main.java.com.Main
+
+javac -cp "C:/javafx-sdk-21.0.6/lib/*" src/main/java/com/Main.java -d out
+java -cp "C:/javafx-sdk-21.0.6/lib/*;out" src.main.java.com.Main
